# katas

./: .gitignore
adventofcode/: .gitignore  Cargo.toml
adventofcode/src/2015/: day_01.rs  day_02.rs  day_03.rs  day_04.rs
