[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "2015_day_01"
path = "src/2015/day_01.rs"

[[bin]]
name = "2015_day_02"
path = "src/2015/day_02.rs"

[[bin]]
name = "2015_day_03"
path = "src/2015/day_03.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
